<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/padding"
    android:paddingLeft="@dimen/padding"
    android:paddingRight="@dimen/padding"
    android:paddingTop="@dimen/padding"
    tools:context=".TagActivity">
    <EditText
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/title"
        android:inputType="text">
    </EditText>
    <EditText
        android:id="@+id/url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:ems="10"
        android:hint="@string/url"
        android:inputType="textUri">
    </EditText>
    <EditText
        android:id="@+id/link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/url"
        android:ems="10"
        android:hint="@string/link"
        android:inputType="textUri">
    </EditText>
    <EditText
        android:id="@+id/alias"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/link"
        android:ems="10"
        android:hint="@string/alias"
        android:inputType="textUri">
    </EditText>
    <EditText
        android:id="@+id/tags"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/alias"
        android:ems="10"
        android:hint="@string/tags"
        android:inputType="textMultiLine">
        <requestFocus/>
    </EditText>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tags">
        <CheckBox
            android:id="@+id/trim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trim"/>
        <CheckBox
            android:id="@+id/read"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/read"/>
    </LinearLayout>
</RelativeLayout>
